tests/fail/nokeywordtag/nokeywordtag.tvpd
<?xml version='1.0' encoding='utf-8'?>
<vpd>
  <name>FILENAME</name>
  <size>16kb</size>
  <VD>01</VD>
  <record name="VINI">
    <rdesc>The VINI record</rdesc>
  </record>
</vpd>
